Pull request #2: configuration: add support of installation in specified folder
Merge in SNORT/libml from ~YVELYKOZ/libml:add_prefix_optoin to master

Squashed commit of the following:

commit 8086408a962887d6de3dfd73ff046765ad9c887e
Author: Yehor Velykozhon <yvelykoz@cisco.com>
Date:   Tue Nov 7 16:17:46 2023 +0200

    build: add installation prefix to configuring script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ ${CMAKE_PROJECT_NAME} version ${VERSION}
 
 Build options:
     type:    ${CMAKE_BUILD_TYPE}
+    prefix:  ${CMAKE_INSTALL_PREFIX}
 
 Compiler options:
     CXX:     ${CMAKE_CXX_COMPILER}
