--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.16)
 
 project(libml C CXX)
 
-set(VERSION_MAJOR 1)
-set(VERSION_MINOR 1)
+set(VERSION_MAJOR 2)
+set(VERSION_MINOR 0)
 set(VERSION_PATCH 0)
 set(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
 
@@ -11,6 +11,8 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 
 set(CMAKE_CXX_STANDARD 17)
+
+include(GNUInstallDirs)
 
 include(BuildType)
 include(CompilerFlags)
